--- a/private/cie/modest_sets.tex
+++ b/private/cie/modest_sets.tex
@@ -361,6 +361,7 @@ We say that a formula~$\phi$ is \emph{valid} if it has at least one
 realizer.
 %
 \begin{figure*}[t]
+	\footnotesize
   \textbf{Underlying types of realizers:}
 \[
   \begin{array}{ll@{\qquad}ll}
@@ -409,6 +410,7 @@ realizer.
     \text{$t_1 \rz_A x$ and $t_2 \rz \phi(x)$}
   \end{array}
 \]
+\vspace{-0.5cm}
   \caption{Realizability interpretation of logic (outline)}
   \label{fig:rz-logic}
 \end{figure*}
