--- a/private/cie/rzbib.bib
+++ b/private/cie/rzbib.bib
@@ -395,3 +395,12 @@ KEY="Peyton Jones"}
  address = {Secaucus, NJ, USA},
 }
 
+@article{kahrs+:tcs97, 
+    author = "Stefan Kahrs and Donald Sannella and Andrzej Tarlecki",
+    title = "The definition of {Extended} {ML}: {A} gentle introduction",
+    journal = "Theoretical Computer Science",
+    volume = "173",
+    number = "2",
+    pages = "445--484",
+    year = "1997",
+    url = "citeseer.ist.psu.edu/kahrs95definition.html" }
