--- a/private/cie/translation.tex
+++ b/private/cie/translation.tex
@@ -1,17 +1,12 @@
 \section{Translation}
 \label{sec:translation}
 
-Having shown the input and output languages for RZ,
-%
 \iflong
+Having shown the input and output languages for RZ,
 we now explain how the translation from one to the other works.
-\else
-we briefly sketch the translation from one to the other.
-\fi
-%
 A theory is translated to a
 specification, where the theory elements are translated as follows.
-
+\fi % \iflong
 
 
 \subsection{Translation of sets and terms}
