--- a/private/cie/logic.tex
+++ b/private/cie/logic.tex
@@ -3,6 +3,7 @@
 \section{The Input Language}
 \label{sec:input-language}
 
+\iflong
 \begin{figure}
 	\[
 	\begin{array}{rl@{\quad}l}
@@ -86,16 +87,18 @@
 	\label{fig:input}
 	\caption{Input Syntax (Simplified)}
 \end{figure}
+\fi % iflong
 
 The input to RZ consists of one or more theories.
 A RZ \emph{theory} is a generalized logical signature with associated
 axioms, similar to a Coq module signature. Theories describe
-\emph{models}, or implementations. A summary of the input
-language appears in Figure~\ref{fig:input}.
-
+\emph{models}, or implementations. 
 \iflong
+A summary of the input language appears in Figure~\ref{fig:input}.
+\fi % iflong
+
 The simplest theory $\ith$ is a list of \emph{theory element}\/s
-$\ite_1 \ldots \ite_n$. A theory element may specify that a certain
+$\ithy{\ite_1 \ldots \ite_n}$. A theory element may specify that a certain
 set, set element, proposition or predicate, or model must exist (using
 the 
 \textsf{Parameter} keyword). It may also provide a definition
@@ -108,23 +111,29 @@ typical examples in mathematics include
 the theory of a vector space parameterized by a field of scalars,
 or the theory of the real numbers parameterized by a model of the
 natural numbers.
+\iflong
 Following Sannella, Sokolowski, and 
-Tarlecki\footnote{``parameterized (program specification) $\neq$ (parameterized program) specification''}~\cite{sannella92:_towar} RZ supports two forms of parameterization.  A theory of a parameterized implementation
+Tarlecki\footnote{``parameterized (program specification) $\neq$ (parameterized program) specification''}~\cite{sannella92:_towar}
+\fi % \iflong
+RZ supports two forms of parameterization.  A theory of a parameterized implementation
 $\idarrow{\iM}{\ith_1}{\ith_2}$ describes a uniform family of models (i.e.,
 a single implementation; a functor in OCaml) that maps every
 model~$\iM$ satisfying~$\ith_1$ to a model of~$\ith_2$.  In contrast,
 a theory $\ilambda{\iM}{\ith_1}{\ith_2}$
 maps models to theories; if $\iTH$ is such a theory, then
-$\iTH(\im_1)$ and $\iTH(\im_2)$ are theories whose implementations might be completely unrelated.\footnote{
+$\iTH(\im_1)$ and $\iTH(\im_2)$ are theories whose implementations might be completely unrelated.\iflong\footnote{
 Further, in some cases $\iTH(\im_1)$ might be implementable while $\iTH(\im_2)$ is not.
 }
+\fi % \iflong
 
 
 Propositions and predicates appearing in theories may use full
-first-order constructive logic, not just the negative fragment. The
-grammar for logical inputs is shown in Figure~\ref{fig:input}. Most of
+first-order constructive logic, not just the negative fragment. 
+\iflong
+The grammar for logical inputs is shown in Figure~\ref{fig:input}. Most of
 this should be familiar, including the use of lambda abstraction to
 define predicates.
+\fi
 
 The language of sets is rich, going well beyond the type systems of
 typical programming languages. In addition to any base sets postulated
@@ -133,7 +142,6 @@ dependent function spaces. We also supports disjoint unions (with
 labeled tags), quotient spaces (a set modulo a stable equivalence
 relation), subsets (elements of a set satisfying a predicate). RZ even
 permits explicit references to sets of realizers.
-\fi
 
 The term language includes introduction and elimination constructs
 for the set level. For product sets we have
