--- a/private/cie/rzbib.bib
+++ b/private/cie/rzbib.bib
@@ -404,3 +404,14 @@ KEY="Peyton Jones"}
     pages = "445--484",
     year = "1997",
     url = "citeseer.ist.psu.edu/kahrs95definition.html" }
+
+@inproceedings{bauer+:clase05,
+         title = "Specifications via Realizability",
+         author = "Andrej Bauer and Christopher A. Stone",
+         booktitle = "Proceedings of the Workshop on the Constructive Logic for Automated Software Engineering (CLASE 2005)",
+         series = "Electronic Notes in Theoretical Computer Science",
+         volume = 153,
+         number = "1",
+         pages = "77--92",
+         year = "2006"}
+
