--- a/private/cie/specifications.tex
+++ b/private/cie/specifications.tex
@@ -156,8 +156,8 @@ constant, a unary, and a binary operation, respectively, while
 assertions \ref{enum:ab-group-axiom-1}--\ref{enum:ab-group-axiom-4}
 correspond to axioms for Abelian groups. 
 
-The output of RZ consists of \emph{module specifications}, each of which consists of a module type
-plus assertions about its components.  More specifically, a specification
+The output of RZ consists of \emph{module specifications}, module types
+plus assertions about their components.  More specifically, a specification
 may contain value declarations, type declarations and definitions, module
 declarations, specification definitions, proposition declarations, and
 assertions.  The language of specifications is summarized in
@@ -235,8 +235,8 @@ unimplementable.
 
 \else % \iflong
 
-The output of RZ consists of \emph{module specifications}, each of which consists of a module type
-plus assertions about its components.  More specifically, a typical specification
+The output of RZ consists of \emph{module specifications}, module types
+plus assertions about their components.  More specifically, a typical specification
 may contain value declarations, type declarations and definitions, module
 declarations, specification definitions, proposition declarations, and
 assertions. 
