--- a/private/cie/logic.tex
+++ b/private/cie/logic.tex
@@ -108,14 +108,20 @@ a named axiom (using the \textsf{Axiom} keyword).
 
 We allow model parameters in theories; 
 typical examples in mathematics include
-the theory of a vector space parameterized by a field of scalars,
-or the theory of the real numbers parameterized by a model of the
+the theory of a vector space parameterized by a field of scalars%
+\iflong,
+, or the theory of the real numbers parameterized by a model of the
 natural numbers.
+\else % \iflong
+.
+\fi % \iflong
+
 \iflong
 Following Sannella, Sokolowski, and 
 Tarlecki\footnote{``parameterized (program specification) $\neq$ (parameterized program) specification''}~\cite{sannella92:_towar}
+RZ supports two forms of parameterization.  
 \fi % \iflong
-RZ supports two forms of parameterization.  A theory of a parameterized implementation
+A theory of a parameterized implementation
 $\idarrow{\iM}{\ith_1}{\ith_2}$ describes a uniform family of models (i.e.,
 a single implementation; a functor in OCaml) that maps every
 model~$\iM$ satisfying~$\ith_1$ to a model of~$\ith_2$.  In contrast,
