--- a/private/cie/rzbib.bib
+++ b/private/cie/rzbib.bib
@@ -274,7 +274,7 @@ KEY="Peyton Jones"}
 
 @Article{post47:_recur_unsol_probl_thue,
   author = 	 {E. Post},
-  title = 	 {Recursive Unsolvability of a Problem of Thue},
+  title = 	 {Recursive Unsolvability of a Problem of {T}hue},
   journal = 	 {The Journal of Symbolic Logic},
   year = 	 1947,
   volume =	 12,
