--- a/private/cie/cie.tex
+++ b/private/cie/cie.tex
@@ -1,17 +1,14 @@
-\pagestyle{plain}
-
 \usepackage{amsmath}
 \usepackage{amssymb}
 %\usepackage{theorem}
 \usepackage{graphicx}
-\usepackage{mathpartir}
+%\usepackage{mathpartir}
 \usepackage{fancyvrb}
 \usepackage{url}
-\usepackage{ifpdf}
-
-\ifpdf
-\usepackage{pdfsync}
-\fi
+%\usepackage{ifpdf}
+%\ifpdf
+%\usepackage{pdfsync}
+%\fi
 
 
 \input{macros.tex}
