--- a/private/cie/examples.tex
+++ b/private/cie/examples.tex
@@ -225,7 +225,7 @@ end.
   \label{fig:kuratowski}
 \end{figure}
 %
-The theory $\f{K}$ is parametrized by a model~$\f{A}$ which contains a
+The theory $\f{K}$ is parameterized by a model~$\f{A}$ which contains a
 set~$\f{a}$. In the first line we include the theory of semilattices.
 Then we postulate an operation $\f{singleton}$ which injects the
 generators into the semilattice. The three definitions are just a
